@@ -32,6 +32,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15544: Fix Decimal.__float__ to work with payload-carrying NaNs.
+
 - Issue #15776: Allow pyvenv to work in existing directory with --clean.
 
 - Issue #15249: BytesGenerator now correctly mangles From lines (when
